# aoc

./: .gitignore
21/01/: a.py  b.py
21/03/: a.py  b.py
21/04/: a.py
21/05/: a.cpp  a_drunk.py  a_naive.py  a_out  input2.txt
21/08/: a.py
21/09/: a.py  b.py
21/10/: b.py
21/12/: b.py
21/13/: a.py  b.py
21/14/: a.py
21/15/: a.py
23/: Cargo.toml
23/aoc-proc/: Cargo.toml
23/aoc-proc/src/: lib.rs
23/src/: main.rs  template.rs
23/src/01/: a.rs  b.rs
23/src/02/: a.rs  b.rs
23/src/03/: a.rs  b.rs
23/src/d01/: a.rs  b.rs  mod.rs
23/src/d02/: a.rs  b.rs  mod.rs
23/src/d03/: a.rs  b.rs  mod.rs
23/src/d04/: a.rs  b.rs
23/src/d05/: a.rs  b.rs  shared.rs
23/src/d06/: a.rs  b.rs  mod.rs
23/src/d07/: a.rs  b.rs  mod.rs
23/src/d08/: a.rs  b.rs  mod.rs
23/src/d09/: b.rs  mod.rs
23/src/d10/: a.rs  b.rs  mod.rs
23/src/d11/: a.rs  b.rs  mod.rs
23/src/d12/: a.rs  b.rs  mod.rs
23/src/d13/: a.rs  b.rs  mod.rs
23/src/d14/: a.rs  b.rs  mod.rs
23/src/d15/: a.rs  b.rs  mod.rs
23/src/d16/: a.rs  b.rs  mod.rs
23/src/template/: a.rs  b.rs  shared.rs
23/src/y23/: mod.rs
23/src/y23/d01/: a.rs  b.rs
23/src/y23/d04/: a.rs
23/src/y23/d05/: b.rs
23/src/y23/d06/: a.rs  b.rs  shared.rs
23/src/y23/d09/: a.rs
23/src/y23/d10/: mod.rs
23/src/y23/d11/: mod.rs
23/src/y23/d12/: a.rs
23/src/y23/d14/: b.rs
23/src/y23/d16/: b.rs
23/src/y23/d17/: a.rs  b.rs
23/util/: Cargo.toml
23/util/src/: algorithm.rs  aoc.rs  error.rs  grid.rs  lib.rs  math.rs  string.rs
23/util/src/aoc/: day.rs  run.rs
py/21/02/: a.py  b.py
py/21/04/: b.py  input2.txt
py/21/05/: b_naive.py
py/21/06/: ab.py
py/21/07/: a.py  b.py
py/21/08/: b.py
py/21/10/: a.py
py/21/11/: a.py  b.py
py/21/12/: a.py
py/21/14/: a_linkedlist.py  b.py
py/21/15/: b.py
rs/aoc-proc/src/: lib.rs  syn_util.rs
rs/src/: main.rs
rs/src/template/: a.rs  b.rs  mod.rs
rs/src/y22/d01/: a.rs  b.rs  mod.rs
rs/src/y22/d02/: a.rs  b.rs  mod.rs
rs/src/y22/d03/: a.rs  b.rs  mod.rs
rs/src/y22/d04/: a.rs  b.rs  mod.rs
rs/src/y22/d05/: a.rs  b.rs  mod.rs
rs/src/y22/d06/: a.rs  b.rs  mod.rs
rs/src/y23/d01/: a.rs  b.rs  mod.rs
rs/src/y23/d02/: a.rs  b.rs  mod.rs
rs/src/y23/d03/: a.rs  b.rs  mod.rs
rs/src/y23/d04/: a.rs  b.rs  mod.rs
rs/src/y23/d05/: a.rs  b.rs  mod.rs
rs/src/y23/d06/: a.rs  b.rs  mod.rs
rs/src/y23/d07/: a.rs  b.rs  mod.rs
rs/src/y23/d08/: a.rs  b.rs  mod.rs
rs/src/y23/d09/: a.rs  b.rs  mod.rs
rs/src/y23/d10/: a.rs  b.rs  mod.rs
rs/src/y23/d11/: a.rs  b.rs  mod.rs
rs/src/y23/d12/: a.rs  b.rs  mod.rs
rs/src/y23/d13/: a.rs  b.rs  mod.rs
rs/src/y23/d14/: a.rs  b.rs  mod.rs
rs/src/y23/d15/: a.rs  b.rs  mod.rs
rs/src/y23/d16/: a.rs  b.rs  mod.rs
rs/src/y23/d17/: a.rs  b.rs  mod.rs
rs/src/y24/: mod.rs
rs/src/y24/d01/: a.rs  b.rs  mod.rs
rs/src/y24/d02/: a.rs  b.rs  mod.rs
rs/src/y24/d03/: a.rs  b.rs  mod.rs
rs/src/y24/d04/: a.rs  b.rs  mod.rs
rs/src/y24/d05/: a.rs  b.rs  input.txt  mod.rs
rs/src/y24/d06/: a.rs  b.rs  mod.rs
rs/src/y24/d07/: a.rs  b.rs  mod.rs
rs/src/y24/d08/: a.rs  b.rs  mod.rs
rs/src/y24/d09/: a.rs  (+2 more)
rs/util/: Cargo.toml
rs/util/src/: algorithm.rs  aoc.rs  collections.rs  error.rs  grid.rs  lib.rs  math.rs  multimap.rs  string.rs  trie.rs
rs/util/src/aoc/: run.rs
rs/util/src/collections/: graph.rs  grid.rs
rs/util/src/collections/grid/: deprecated.rs  direction.rs  grid_map.rs  position.rs
rs/util/src/grid/: abstract_grid.rs  direction.rs  grid_map.rs  grid_math.rs  grid_vec.rs  position.rs  traits.rs
(+45 files in other folders)
