[package]
name = "advent23"
authors = ["Maple Xu <xumaple@umich.edu>"]
version = "0.1.0"
edition = "2021"
default-run = "advent23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "./util" }

[[bin]]
name = "01a"
path = "src/d01/a.rs"

[[bin]]
name = "01b"
path = "src/d01/b.rs"

[[bin]]
name = "02a"
path = "src/d02/a.rs"

[[bin]]
name = "02b"
path = "src/d02/b.rs"

[[bin]]
name = "03a"
path = "src/d03/a.rs"

[[bin]]
name = "03b"
path = "src/d03/b.rs"

[workspace]

members = [
    ".",
    "util",
]

default-members = [
    ".",
    "util",
]