[package]
name = "advent23"
authors = ["Maple Xu <xumaple@umich.edu>"]
version = "0.1.0"
edition = "2021"
default-run = "advent23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "./util" }
aoc-proc = { path = "./aoc-proc" }
itertools = "0.12"

[[bin]]
name = "01a"
path = "src/d01/a.rs"

[[bin]]
name = "01b"
path = "src/d01/b.rs"

[[bin]]
name = "02a"
path = "src/d02/a.rs"

[[bin]]
name = "02b"
path = "src/d02/b.rs"

[[bin]]
name = "03a"
path = "src/d03/a.rs"

[[bin]]
name = "03b"
path = "src/d03/b.rs"

[[bin]]
name = "04a"
path = "src/d04/a.rs"

[[bin]]
name = "04b"
path = "src/d04/b.rs"

[[bin]]
name = "05a"
path = "src/d05/a.rs"

[[bin]]
name = "05b"
path = "src/d05/b.rs"

[[bin]]
name = "06a"
path = "src/d06/a.rs"

[[bin]]
name = "06b"
path = "src/d06/b.rs"

[[bin]]
name = "07a"
path = "src/d07/a.rs"

[[bin]]
name = "07b"
path = "src/d07/b.rs"

[[bin]]
name = "08a"
path = "src/d08/a.rs"

[[bin]]
name = "08b"
path = "src/d08/b.rs"

[workspace]

members = [
    ".", 
    "aoc-proc",
    "util",
]

default-members = [
    ".",
    "aoc-proc",
    "util",
]
