[package]
name = "advent23"
authors = ["Maple Xu <xumaple@umich.edu>"]
version = "0.1.0"
edition = "2021"
default-run = "advent23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "./util" }
aoc-proc = { path = "./aoc-proc" }

[workspace]

members = [
    ".", 
    "aoc-proc",
    "util",
]

default-members = [
    ".",
    "aoc-proc",
    "util",
]
