[package]
name = "aoc-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
syn = { version = "2.0", features = [ "full" ] }
quote = "1.0"
lazy_static = "1"
proc-macro2 = "1.0"

[lib]
proc-macro = true
