[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.12"
num = "0.4"
proc-macro2 = "1.0"
# syn = { version = "2.0", features = [ "full" ] }
quote = "1"