[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.13"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
priority-queue = "1.3"
proc-macro2 = "1.0"
# syn = { version = "2.0", features = [ "full" ] }
quote = "1"
clap = { version = "4", features = ["derive"] }
regex = "1.11"
multi_key_map = "0.3"
pathfinding = "4"